src/objects/Open_Contracts_SAP__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Code</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Open_Contracts_SAP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Qty_MT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Qty(MT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Quantity_MT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Quantity (MT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Material Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Contract_Qty_MT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Contract Qty (MT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_UoM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate/UoM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Month__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipment Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipment Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Qty_MT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total Contract Qty(MT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Open Contract (Cocoa)</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Open Contracts SAP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open Contracts (Cocoa)</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>